--- a/src/Login.css
+++ b/src/Login.css
@@ -7,99 +7,156 @@
    } 
    body{
     display: flex;
-    flex-direction: row;
+    
     background-image: url(./images/space.jpg);
     background-size: cover;
-     height: 100%; 
-     width: 100%;
+    height: 100%; 
+    width: 100%;
     background-repeat: no-repeat; 
+    justify-content: center;
+    align-items: center;
    }
   .boxLogo{
       display: flex;
+      align-items: center;
+      justify-content: flex-start;
      
   }
    .logoletters{
        display: flex;
-       justify-content: center;
-       align-items: center;
        font-family: 'Vibes', cursive;
        color: rgba(255, 255, 255, 1);
        font-style: normal;
        font-weight: 400;
        font-size: 96px;
        line-height: 171px;
-       left: 100px;
+       right: 100px;
    }
    .imagenLogo{
        width: 280px; 
        height: 280px;
-       justify-content: center;
-       align-items: center;
+   }
+   .loginBox{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
    }
    .container{
-    position: absolute;
-    width: 450px;
-    height: 767px;
-    left: 181px;
-    top: 298px;
-    display:flex;
-    background: rgba(206, 5, 146, 0.79);
-    border: 4px solid #140375;
-    box-sizing: border-box;
-    border-radius: 15px;
+    display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    width: 80%;
+    height: 40%;
+    background: rgba(206, 5, 146, 0.79);
+    border: 4px solid #140375;
+    border-radius: 15px;
+    gap:40px;
    }
 #logIn{
-    position: absolute;
+display: flex;
 width: 138px;
 height: 58px;
-/* left: calc(50% - 138px/2 + 16px); */
 top: calc(50% - 58px/2 - 277px);
 justify-content: center;
-font-family: 'Inter';
+font-family: 'Roboto';
 font-style: normal;
 font-weight: 400;
 font-size: 48px;
 line-height: 58px;
-
-
 text-align: center;
-
 color: #FFFFFF;
-
+margin-top: 40px;
 }
+
 .inputEmail{
-position: absolute;
-align-items: flex-start;
+
+align-items:center;
 width: 328px;
-height: 70px;
+height: 65px;
 background: #FFFFFF;
 border: 1px solid #B2D3E1;
 box-sizing: border-box;
 border-radius: 10px;
 text-align: center;
+transition: 0.5s;
+outline: none;
+margin: 40px 0 10px;
+font-size: 20px;
+
+
 }
+
 .inputPassword{
 background: #FFFFFF;
 border: 1px solid #B2D3E1;
 box-sizing: border-box;
 border-radius: 10px;
 width: 328px;
-height: 70px;
+height: 65px;
+text-align: center;
+outline: none;
+font-size: 20px;
   
 }
-   .buttonGoogle{
-    position: absolute;
-width: 130px;
-height: 106px;
-border-radius: 60px;
-background: #FFFFFF;
-   }
-   .google{
-    position: absolute;
-width: 90px;
-height: 80px;   
-   }
-  }
+.buttonLogin{
+background: rgba(22, 6, 162, 1);
+width: 140px;
+height: 80px;
+left: 400px;
+top: 808px;
+border-radius: 40px;
+color: #FFFFFF;
+font-size: 20px;
+border:#B2D3E1 ;
+cursor:pointer;
+margin-bottom: -20px;
+
+}
+span{
+    font-size: 18px;
+    color:black;
+}
+.line{
+   width: 400px;
+   height: 100px;
+   margin-bottom: -60px
+}
+.buttonGoogle{
+width: 120px;
+height: 120px;
+border-radius: 50%;
+background-color: #FFFFFF;
+border: #B2D3E1;
+cursor: pointer;
+flex-direction: row-reverse;
+display: flex;
+margin-bottom: -125px;
+z-index: 20px;
+}
+.google{
+width: 60px;
+height: 60px; 
+z-index: 1px;
+flex-direction: row-reverse;
+display: flex;
+}
+.divSignUp{
+color: #FFFFFF;
+font-size: 20px;
+font-family: 'Roboto';
+margin-bottom: -15px;
+
+}
+.pSignUp{
+  color:rgba(22, 6, 162, 1);  
+  font-size: 25px;
+  font-family: 'Roboto';
+  border:3px; 
+  
+}
+
+}
   
