--- a/src/Notes.css
+++ b/src/Notes.css
@@ -1,13 +1,78 @@
 @media  (max-width: 1024px) {
+   *{
+      margin:0;
+      padding:0;
+   }
+   .body{
+      display: flex;
+    
+      background-image: url(./images/space.jpg);
+      background-size: cover;
+      height: 100%; 
+      width: 100%;
+      background-repeat: no-repeat; 
+      justify-content: center;
+      align-items: center;
+    }
+    .noteBox{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     flex-direction: column;   
+  
+    }
     .containerHome{
-        display:flex;
-        justify-content: center;
-        align-items: center;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+
+    }
+    
+    .boxLogo{
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+    }
+    .logoletters{
+      display: flex;
+      font-family: 'Vibes', cursive;
+      color: rgba(255, 255, 255, 1);
+      font-style: normal;
+      font-weight: 400;
+      font-size: 96px;
+      line-height: 171px;
+      right: 100px;
+  }
+  .imagenLogo{
+      width: 280px; 
+      height: 280px;
+  }
+  .loginBox{
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+   align-items: center;
+
+  }
+    .close{
+       display: flex;
+       margin-right: -550px;
+       width: 90px;
+       height: 90px;
+       background-color: transparent;
+       margin-top: -70px;
+       border: transparent;
+    }
+    .closeSession{
+    display: flex;
+    margin-right: -550px;
 
     }
  .seeker{
-    position: absolute;
-    align-items: flex-start;
+   
     width: 328px;
     height: 70px;
     background:rgba(190, 160, 234, 1);
@@ -15,7 +80,29 @@
     box-sizing: border-box;
     border-radius: 10px;
     text-align: center;
-    font-family:'Vibes', cursive ;
+    font-family:Roboto;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 30px;
+    
  } 
+ .noteButton{
+    display:flex;
+    justify-content: center;
+    margin-top: 10px;
+    height: 120px;
+    width: 120px;
+    background-color: transparent;
+    border: transparent;
+    
+       
+ }
+.note{
+display:flex;
+justify-content: center;
+height: 80px;
+width: 80px;
+margin-top: -85px;
+}
     
 }
