--- a/src/New-Notes.css
+++ b/src/New-Notes.css
@@ -58,10 +58,10 @@
            width: 90px;
            height: 90px;
            background-color: transparent;
-           margin-left: -630px;
+           margin-left: -500px;
            margin-top: 16px;
            display: flex;
-           border: none;
+           /* border: none; */
            
        }
        .closeNote{
@@ -69,7 +69,7 @@
            width: 50px;
            height: 50px;
            margin-top: -105px;
-           margin-left: -630px;
+           margin-left: -500px;
            display: flex;
            
        }
@@ -77,7 +77,7 @@
         width: 90px;
         height: 90px;
         background-color: transparent;
-        margin-right: -630px;
+        margin-right: -500px;
         margin-top: -100px;
         display: flex;
         /* border: none; */
@@ -87,7 +87,7 @@
         width: 50px;
         height: 50px;
         margin-top: -111px;
-        margin-right: -630px;
+        margin-right: -500px;
         display: flex;
        }
        .post{
@@ -124,9 +124,9 @@
             display: flex;
             width: 300px;
             height: 300px;
-            text-align: center;
-            align-items: flex-start;
-            border: transparent;
+            text-align:justify;
+            align-items: center;
+            /* border: transparent; */
             font-family: Roboto;
             font-size: 20px;
             color: black;
