--- a/src/Notes.css
+++ b/src/Notes.css
@@ -90,41 +90,14 @@
     display:flex;
     justify-content: center;
     margin-top: 10px;
-    height: 120px;
-    width: 120px;
-    background-color: transparent;
+    height: 140px;
+    width: 140px;
+    background-image: url(./images/NewCopy\ .png);
+    background-repeat: no-repeat;
     border: transparent;
+    background-color: transparent;
     
        
  }
-.note{
-display:flex;
-justify-content: center;
-height: 80px;
-width: 80px;
-margin-top: -85px;
-}
-.containerNotes{
-   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-   width: 100%;
-   height: 100%;
-}
-.miniNote{
-display: flex;
 
-}
-.notes{
-   width: 50%;
-   height: 50%;
-}
-.textNote{
-   margin-top: 20px;
-   width:100%;
-   height: 100%;
-   
-}
-    
 }
