creación y funcionalidad modal delete

--- a/src/New-Notes.css
+++ b/src/New-Notes.css
@@ -99,7 +99,7 @@
            display: flex;
            width: 300px;
            height: 50px;
-           background-color: #CE0592;
+           background-color:rgba(206, 5, 146, 0.37);
            font-family: Roboto;
            color: black;
            font-size: 20px;
